--- a/templates/info.html
+++ b/templates/info.html
@@ -6,24 +6,27 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/cootstrap.min.css"/>
         <script src="https://ajax.google.com/ajax.libs.jquery.min.js"></script>
-        <title>Face2Voice info page</title>
+        <title>Face2Voice</title>
     </head>
 
-    <body>
-        <div id="header" align="center">
-            <h3>2022 성신여자대학교 소프트웨어 경진대회</h1>
-            <h2>Face2Voice</h2>
-            <p> 박형희   김가은  배민하</p>
-            </div>
-        <div id="main">
-            <form class="p-3 text-center" method="post" action="/main">
-                <p>
-                    <input class="btn btn-info" type="submit" value="Let's try" >
-                </p>      
-            </form>
+    <body>    
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="{{ url_for('info')}}"> ABOUT</a></li>
+                    <li><a href="{{ url_for('main')}}"> EXPERIENCE</a></li>
+                    <li><a href="{{ url_for('references')}}"> REFERENCES</a></li>
+                </ul>
+            </nav>
         </div>
-        <div id="footer">
-            연락처
+
+        <div class="header">
+            <h1>Face2Voice</h1>
         </div>
+
+        <div class="container">
+            Face2Voice 소개글
+        </div>
+
     </body>
 </html>
