--- a/templates/info.html
+++ b/templates/info.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/cootstrap.min.css"/>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
         <script src="https://ajax.google.com/ajax.libs.jquery.min.js"></script>
         <title>Face2Voice</title>
     </head>
