--- a/templates/result.html
+++ b/templates/result.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
-        <script src="https://ajax.google.com/ajax.libs.jquery.min.js"></script>
-        <title>Face2Voice result</title>
+        <title>Face2Voice</title>
     </head>
 
     <body>
