--- a/templates/home.html
+++ b/templates/home.html
@@ -12,8 +12,8 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="{{ url_for('info')}}"> ABOUT</a></li>
-                    <li><a href="{{ url_for('main')}}"> EXPERIENCE</a></li>
+                    <li><a href="{{ url_for('home')}}"> HOME</a></li>
+                    <li><a href="{{ url_for('face2voice')}}"> TRY FACE2VOICE</a></li>
                     <li><a href="{{ url_for('references')}}"> REFERENCES</a></li>
                 </ul>
             </nav>
