--- a/templates/face2voice.html
+++ b/templates/face2voice.html
@@ -50,7 +50,8 @@
                     //입력 사진, 문장 보이지 않게 설정
                     document.getElementById("nav").style.visibility = 'hidden';
                     document.getElementById("form").style.display ='none';
-                    document.getElementById("progress_mel_message").style.visibility = 'visible';  
+                    document.getElementById("progress_mel_container").style.visibility = 'visible';  
+                    document.getElementById("progress_container").style.visibility ='visible';
                     document.getElementById("progress_caution_message").style.visibility = 'visible';
 
                     // 일정 간격마다 내장 메소드를 실행
@@ -66,10 +67,12 @@
                             total = response['total'];
 
                             if (progressed != 0 && total != 0) {
-                                document.getElementById("progress_mel_message").style.display ='none';
+                                $('#progress_status').text("Mel Spectrogram Generation Completed!");
+                                document.getElementById("infinite_progress").style.backgroundColor = "green";
+                                document.getElementById("infinite_progressbar").style.visibility ='none';
                                 document.getElementById("progress_container").style.visibility ='visible';
                                 $('#progress_bar').width((progressed / total) * 100 + "%");  
-                                $('#percent').html(progressed + '/' + total)
+                                $('#percent').html(((progressed / total) * 100).toFixed(2) + "%")
                             }
                         }, 
                         error: function(error) {
@@ -126,8 +129,11 @@
             </div>
 
             <!-- 음성 합성 경과를 보여주는 메시지와 progress bar-->
-            <div id="progress_mel_message">
-                <h3>Generating Melspectrograms...</h3>
+            <div id="progress_mel_container">
+                <h3 id="progress_status">Generating Melspectrograms...</h3>
+                <div id="infinite_progress">
+                    <div id="infinite_progressbar"></div>
+                </div>
             </div>
             <div id="progress_container">
                 <h3>Synthesizing voice...</h3>
