--- a/templates/face2voice.html
+++ b/templates/face2voice.html
@@ -116,7 +116,7 @@
                         <li>
                             <h4> Write down the text you want to synthesize </h4>
                             <p>
-                                <textarea name="inputtext" id="text" required >Welcome to the toolbox! To begin, load an face image from your datasets or capture one yourself.&#10;Once its embedding has been created, you can synthesize any text written here.&#10;The synthesizer expects to generate outputs that are somewhere between 5 and 12 seconds.&#10;To mark breaks, write a new line. Each line will be treated separately.&#10;Then, they are joined together to make the final spectrogram. Use the vocoder to generate audio.&#10;The vocoder generates almost in constant time, so it will be more time efficient for longer inputs like this one.&#10;On the left you have the embedding projections. Load or record more images to see them.&#10;If you have at least 2 or 3 images from a same speaker, a cluster should form.&#10;Synthesized utterances are of the same color as the speaker whose voice was used, but they're represented with a cross.</textarea>
+                                <textarea name="inputtext" id="text" required >Welcome to the toolbox! Can you guess what my voice is like?</textarea>
                             </p>
                         </li> 
                     </ol>
