--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="container">
-            Face2Voice 소개글
+            <img src = "img1.png">
         </div>
 
     </body>
