--- a/templates/face2voice_result.html
+++ b/templates/face2voice_result.html
@@ -31,7 +31,7 @@
             </div>
 
             <!-- 입력 문장 출력 -->
-            <p>
+            <p class = "output">
                 {% with messages = get_flashed_messages() %}
                     {% if messages %} 
                     {% for message in messages %}
