--- a/templates/references.html
+++ b/templates/references.html
@@ -27,17 +27,19 @@
             <div>
                 <h2>Paper</h2>
                 <ol>
-                    <li>참고논문</li>
-                    <li>참고논문</li>
-                    <li>참고논문</li>
+                    <li> <a href = "https://arxiv.org/pdf/1806.04558.pdf">SV2TTS </a> </li>
+                    <li> <a href = "https://arxiv.org/pdf/2206.14009.pdf"> Lip2Speech</a> </li>
+                    <li> <a href = "https://arxiv.org/pdf/1905.09773.pdf"> Speech2Face </a> </li>
+                    
                 </ol>
             </div>
             <div>
                 <h2>Code</h2>
                 <ol>
-                    <li>참고코드</li>
-                    <li>참고코드</li>
-                    <li>참고코드</li>
+                    <li> <a href = "https://github.com/CorentinJ/Real-Time-Voice-Cloning">SV2TTS </a> </li>
+                    <li> <a href = "https://github.com/Chris10M/Lip2Speech"> Lip2Speech</a> </li>
+                    <li> <a href = "https://github.com/saiteja-talluri/Speech2Face"> Speech2Face </a> </li>
+
                 </ol>
             </div>
         </div>
