--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
+    background : #E2E2E2;
   }
-  
+
 div.menu {
 
     background: black;
@@ -59,7 +60,7 @@ nav li a:hover {
 div.header {
     margin: 0;
 
-    padding-top: 90px;
+    padding-top: 50px;
     padding-bottom: 0px;
     padding-left: 20px;
     padding-right: 20px;
@@ -83,7 +84,17 @@ div.container {
     position: relative;
 
     max-width: 609px;
-    width: 100%
+    width: 100%;
+}
+
+div.container li a{
+    text-decoration: none;
+    color : black;
+}
+
+div.container li a:hover{
+    text-decoration: none;
+    color: rgb(101, 101, 101);
 }
 
 #image_container {
@@ -98,7 +109,7 @@ div.container {
 #btn {
     padding-inline-start: 40px;
     padding-inline-end: 40px;
-    margin-top: 90px;
+    margin-top: 40px;
 }
 
 div#btn input{
@@ -167,4 +178,8 @@ h1 {
 textarea {
     width: 100vmin; 
     height: 10em; 
+}
+
+p.output{
+    background:white;
 }
