--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,20 @@
         </div>
 
         <div class="container">
-            Face2Voice 소개글
+            <img src = "img2.jpg"><br>
+            <audio controls="controls">
+                    <source src="img2.mp4" type="audio/wav"/>
+            </audio>
+            <p>original audio</p>
+            <audio controls="controls">
+                    <source src="genAudio_img2.wav" type="audio/wav"/>
+            </audio>
+            <p>Predicted audio</p>
+            <br><br>
+            <p>Face2Speech는 얼굴을 입력으로 받아 그에 해당하는 얼굴을 출력하는 프로그램입니다. <br>
+                음성으로 변환을 원하는 얼굴 이미지를 넣어 원하는 텍스트로 음성을 들어보세요.</p>
+            <p>Face2spech is a program that receives a face as an input and outputs a corresponding face. <br>
+                Put the face image you want to convert to voice and listen to the voice in the text you want.</p>
         </div>
 
     </body>
