--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,7 +73,7 @@ div.header {
     padding-top: 50px;
     padding-bottom: 0px;
     padding-left: 20px;
-    #padding-right: 20px;
+    padding-right: 20px;
 
     position: relative;
 
