--- a/templates/references.html
+++ b/templates/references.html
@@ -24,31 +24,30 @@
         </div>
 
         <div class="container">
-            <div>
-                <h2>Paper</h2>
+            <div id="sub_container">
+                <div id="paper_container">
+                    <h2>Paper</h2>
+                    <ol> 
+                        <li><a href = "https://arxiv.org/pdf/1806.04558.pdf">SV2TTS </a> </li>
+                        <p id="mark"> Ye Jia 外 11(2019)「Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis」</p>
+    
+                        <li> <a href = "https://arxiv.org/pdf/2206.14009.pdf"> Lip2Speech</a> </li>
+                        <p id="mark"> Christen Millerdurai 外 2(2022)「Show Me Your Face, And I’ll Tell You How You Speak」</p>
+                 
+                        <li> <a href = "https://arxiv.org/pdf/1905.09773.pdf"> Speech2Face </a> </li>
+                        <p id = "mark"> Tae-Hyun Oh 外 6(2019)「Speech2Face: Learning the Face Behind a Voice」</p>                
+                    </ol> 
+                </div>
 
-                <ol> 
-                    <li><a href = "https://arxiv.org/pdf/1806.04558.pdf">SV2TTS </a> </li>
-                    <li class = "mark"> Ye Jia 外 11(2019)「Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis」</li>
-                    <br>
-                    <li> <a href = "https://arxiv.org/pdf/2206.14009.pdf"> Lip2Speech</a> </li>
-                    <li class = "mark"> Christen Millerdurai 外 2(2022)「Show Me Your Face, And I’ll Tell You How You Speak」</li>
-                    <br>
-                    <li> <a href = "https://arxiv.org/pdf/1905.09773.pdf"> Speech2Face </a> </li>
-                    <li class = "mark"> Tae-Hyun Oh 外 6(2019)「Speech2Face: Learning the Face Behind a Voice」</li>
-                    
-                </ol> 
-            </div>
-            <br><br>
-            <div>
-                <h2>Code</h2>
-                 <ol> 
-                    <li> <a href = "https://github.com/CorentinJ/Real-Time-Voice-Cloning">SV2TTS </a> </li><br>
-                    <li> <a href = "https://github.com/Chris10M/Lip2Speech"> Lip2Speech</a> </li><br>
-                    <li> <a href = "https://github.com/saiteja-talluri/Speech2Face"> Speech2Face </a> </li>
+                <div id="code_container">
+                    <h2>Code</h2>
+                    <ol> 
+                        <li> <a href = "https://github.com/CorentinJ/Real-Time-Voice-Cloning">SV2TTS </a> </li><br>
+                        <li> <a href = "https://github.com/Chris10M/Lip2Speech"> Lip2Speech</a> </li><br>
+                        <li> <a href = "https://github.com/saiteja-talluri/Speech2Face"> Speech2Face </a> </li>
 
-                 </ol> 
-
+                    </ol> 
+                </div>
             </div>
         </div>
     </body>
