[DESIGN] add caution icon

--- a/templates/face2voice.html
+++ b/templates/face2voice.html
@@ -139,7 +139,8 @@
                         <div id="percent"></div>
                     </div>
                     <div id="progress_caution_message">
-                        CAUTION: Do not press the Refresh or Back button
+                        <img src="{{ url_for('static', filename='images/icon/caution.png') }}">
+                        CAUTION: Do not press the Refresh or Back button  
                     </div>
                 </div>
             </div>
