--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,7 +130,7 @@ ol#btn_input li#btn #btn_inference{
     line-height: 50px;
     color: white;
 
-    background-color: rgb(44, 44, 44);
+    background-color: rgb(58, 57, 57);
     box-shadow: 0px 5px 0px 0px #000000;
     border-radius: 5px;
     transition: all 0.2s ;
@@ -150,6 +150,11 @@ div#inference_progress {
     margin: auto;
     padding-top: 15vh;
     display: none;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 
 #progress_mel_container, #progress_container, #progress_caution_message {
@@ -199,8 +204,14 @@ div#inference_progress {
 }
 
 #progress_caution_message {
-    color: rgb(255, 103, 52);
+    width: 100%;
+    height: 10%;
     font-size: 1.3em;
+}
+
+#progress_caution_message img {
+    width: 1.3em;
+    vertical-align: middle;
 }
 
 textarea {
@@ -227,10 +238,6 @@ textarea {
 #text_kor, #text_en{
     margin-top: 5%;
 }
-
-/* #result_container {
-    text-align: center;
-} */
 
 .header h2 {
     text-align: center;
