[FEAT] retry button

--- a/templates/face2voice_result.html
+++ b/templates/face2voice_result.html
@@ -55,6 +55,12 @@
                     </div>
                     {% endif %} 
                 </div>
+                <div id="btn_input">
+                    <div id="btn">
+                        <!-- 음성 합성 버튼 -->
+                        <button id="btn_again" type="button" onclick=window.location.href="{{ url_for('face2voice')}}">DO IT AGAIN</button>
+                    </div>  
+                </div>   
             </div>
         </div>
     </body>
