--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,17 +113,22 @@ li #image{
     margin-top: 7%;
 }
 
-ol#btn_input{
+#result_container {
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+#btn_input{
     text-align: center;
 }
 
-ol#btn_input li#btn {
+#btn_input li#btn, #btn {
     width: 100%;
     list-style:none;
     display: inline-block;
 }
 
-ol#btn_input li#btn #btn_inference{
+#btn_input li#btn #btn_inference, #btn_again{
     margin: 10px 20px 10px 0;
     display: inline-block;
     text-align: center;
@@ -138,7 +143,7 @@ ol#btn_input li#btn #btn_inference{
   
 }
 
-ol#btn_input li#btn #btn_inference:hover {
+#btn_input li#btn #btn_inference:hover, #btn_again:hover {
     margin-top: 15px;
     margin-bottom: 5px;
     box-shadow: 0px 0px 0px 0px #000000;
@@ -211,6 +216,7 @@ div#inference_progress {
 
 #progress_caution_message img {
     width: 1.3em;
+    padding-right: 2px;
     vertical-align: middle;
 }
 
